# capadvisors-frontend

./: Initialize-VercelAssurance.ps1  package-lock.json  sample_notes.txt  watch-vercel-deployment.ps1
capadvisors-backend/: Cargo.toml  Dockerfile  railway.json
capadvisors-backend/src/: db.rs  main.rs
capadvisors-backend/src/middleware/: auth.rs
capadvisors-backend/src/routes/: auth.rs  map.rs  nexus.rs  profile.rs  quiz.rs  quiz_submit.rs  ranking.rs  upload.rs
capadvisors-backend/src/utils/: ai_detector.rs  embedding.rs  gemini_improvise.rs  gemini_map.rs  gemini_refine_answer.rs  llm.rs  mod.rs  rating.rs  text.rs
capadvisors-frontend/: .env  .gitignore  index.html  package.json
capadvisors-frontend/scripts/: write-build-info.mjs
capadvisors-frontend/src/: App.css  App.svelte  main.js
capadvisors-frontend/src/lib/: chapters.js  httpInterceptor.js
capadvisors-frontend/src/lib/components/: AdminNexusWorkflow.svelte  AdminReviewPanel.svelte  EditProfile.svelte  Leaderboard.svelte  QuizTaker.svelte
src/: App.css  App.svelte  main.js
src/lib/: auth.svelte.js
src/lib/components/: ScrollingLeaderboard.svelte
