[package]
name = "capadvisors-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
libsql = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
pdf-extract = "0.7.0"
lopdf = "0.33"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
futures-util = "0.3"
zeroize = "=1.8.1"
jsonwebtoken = "9.3"
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.5", features = ["rand_core"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tempfile = "3"

[patch.crates-io]
zeroize = { git = "https://github.com/RustCrypto/utils.git", tag = "zeroize-v1.8.2" }
